--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.RouneboundMagic">
         <activity
             android:name=".IntroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CharacterSelectionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StartGameActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
